Adding role feild to the register form

--- a/src/app/components/user-register/user-register.component.html
+++ b/src/app/components/user-register/user-register.component.html
@@ -50,6 +50,17 @@
       <mat-icon matPrefix>business</mat-icon>
     </mat-form-field>
 
+    <mat-form-field appearance="fill" class="w-full">
+      <mat-label>Roles</mat-label>
+      <mat-select formControlName="roles" multiple>
+        @for (item of roles$ | async; track item) {
+        <mat-option [value]="item.name">{{item.name}}</mat-option>
+        }
+
+      </mat-select>
+      <mat-icon matPrefix>groups</mat-icon>
+    </mat-form-field>
+    
     <!-- Address -->
     <mat-form-field appearance="fill" class="w-full">
       <mat-label>Address</mat-label>
