--- a/src/app/components/user-register/user-register.component.html
+++ b/src/app/components/user-register/user-register.component.html
@@ -56,11 +56,10 @@
         @for (item of roles$ | async; track item) {
         <mat-option [value]="item.name">{{item.name}}</mat-option>
         }
-
       </mat-select>
       <mat-icon matPrefix>groups</mat-icon>
     </mat-form-field>
-    
+
     <!-- Address -->
     <mat-form-field appearance="fill" class="w-full">
       <mat-label>Address</mat-label>
@@ -110,7 +109,7 @@
     <button
       type="submit"
       [disabled]="!registerForm.valid"
-      class="w-full py-2 px-4 text-white bg-purple-700 rounded-md hover:bg-purple-800 focus:outline-none focus:ring-2 focus:ring-purple-500 disabled:bg-purple-400 transition duration-300 col-span-2"
+      class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg w-full transition duration-300 col-span-2"
     >
       Register
     </button>
@@ -118,7 +117,7 @@
     <!-- Login Link -->
     <div class="text-center mt-6 col-span-2">
       <span class="text-gray-600 text-sm">Already have an account?</span>
-      <a class="text-purple-700 font-medium hover:text-purple-800" [routerLink]="['/login']">
+      <a class="text-blue-500 hover:text-blue-700 font-semibold" [routerLink]="['/login']">
         Login
       </a>
     </div>
