--- a/src/app/components/user-register/user-register.component.html
+++ b/src/app/components/user-register/user-register.component.html
@@ -15,6 +15,8 @@
       <h6 class="text-gray-600 text-sm">Create your account</h6>
     </div>
 
+    <!-- Form Fields -->
+
     <!-- Username -->
     <mat-form-field appearance="fill" class="w-full">
       <mat-label>Username</mat-label>
@@ -60,12 +62,7 @@
     <!-- Password -->
     <mat-form-field appearance="fill" class="w-full">
       <mat-label>Password</mat-label>
-      <input
-        matInput
-        [type]="passwordHide ? 'password' : 'text'"
-        formControlName="password"
-        placeholder="Password"
-      />
+      <input matInput [type]="passwordHide ? 'password' : 'text'" formControlName="password" placeholder="Password" />
       <mat-icon matPrefix>lock</mat-icon>
       <mat-icon (click)="passwordHide = !passwordHide" matSuffix>
         {{ passwordHide ? 'visibility_off' : 'visibility' }}
@@ -75,12 +72,7 @@
     <!-- Confirm Password -->
     <mat-form-field appearance="fill" class="w-full">
       <mat-label>Confirm Password</mat-label>
-      <input
-        matInput
-        [type]="confirmPasswordHide ? 'password' : 'text'"
-        formControlName="confirmPassword"
-        placeholder="Confirm Password"
-      />
+      <input matInput [type]="confirmPasswordHide ? 'password' : 'text'" formControlName="confirmPassword" placeholder="Confirm Password" />
       <mat-icon matPrefix>lock</mat-icon>
       <mat-icon (click)="confirmPasswordHide = !confirmPasswordHide" matSuffix>
         {{ confirmPasswordHide ? 'visibility_off' : 'visibility' }}
@@ -107,9 +99,7 @@
     <!-- Login Link -->
     <div class="text-center mt-6 col-span-2">
       <span class="text-gray-600 text-sm">Already have an account?</span>
-      <a class="text-blue-500 hover:text-blue-700 font-semibold" [routerLink]="['/login']">
-        Login
-      </a>
+      <a class="text-blue-500 hover:text-blue-700 font-semibold" [routerLink]="['/login']">Login</a>
     </div>
   </form>
 </div>
