Adding property manager as the default role

--- a/src/app/components/user-register/user-register.component.html
+++ b/src/app/components/user-register/user-register.component.html
@@ -56,6 +56,15 @@
       <mat-icon matPrefix>business</mat-icon>
     </mat-form-field>
 
+    <!-- Role -->
+    <mat-form-field appearance="fill" class="w-full">
+      <mat-label>Role</mat-label>
+      <mat-select formControlName="role">
+        <mat-option value="propertymanager">Property Manager</mat-option>
+      </mat-select>
+      <mat-icon matPrefix>groups</mat-icon>
+    </mat-form-field>
+
     <!-- Address -->
     <mat-form-field appearance="fill" class="w-full">
       <mat-label>Address</mat-label>
