--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="flex items-center justify-center min-h-screen bg-gradient-to-r from-blue-50 via-gray-100 to-blue-50">
-  <div class="bg-white shadow-2xl rounded-lg flex flex-col md:flex-row w-11/12 md:w-3/4 h-auto md:h-4/5 overflow-hidden transition-all duration-500">
+  <div
+    class="bg-white shadow-2xl rounded-lg flex flex-col md:flex-row w-11/12 md:w-3/4 h-auto md:h-4/5 overflow-hidden transition-all duration-500">
 
     <!-- Left Section: About the Property Management System -->
     <div class="w-full md:w-1/2 p-10 flex flex-col justify-center items-center bg-blue-100 bg-opacity-90">
@@ -7,8 +8,8 @@
         Welcome to Property Management System
       </h1>
       <p class="text-lg text-gray-700 mb-6 text-center max-w-lg leading-relaxed">
-        Manage your properties and maintenance tasks effortlessly with our comprehensive platform. 
-        From job posting to service provider management, our system is designed to make property management 
+        Manage your properties and maintenance tasks effortlessly with our comprehensive platform.
+        From job posting to service provider management, our system is designed to make property management
         as efficient and effective as possible.
       </p>
       <ul class="list-disc pl-5 text-gray-600 text-left space-y-2">
@@ -28,7 +29,7 @@
       <div class="flex flex-col items-center gap-5 w-full">
         <!-- Login Check (Conditional Rendering) -->
         <h1 class="text-2xl text-center">
-          You are logged in as 
+          You are logged in as
           <span class="font-bold bg-blue-600 rounded-md p-2 text-white">
             <!-- User's name would go here -->
           </span>
@@ -37,13 +38,15 @@
         <!-- Logged-out View -->
         <h1 class="text-2xl text-center">You are not logged in</h1>
         <a routerLink="/login" class="w-full">
-          <button class="bg-blue-600 hover:bg-blue-700 transition-colors duration-300 text-white font-bold py-3 px-6 rounded-md w-full mb-4 shadow-lg transform hover:scale-105">
+          <button
+            class="bg-blue-600 hover:bg-blue-700 transition-colors duration-300 text-white font-bold py-3 px-6 rounded-md w-full mb-4 shadow-lg transform hover:scale-105">
             Login
           </button>
         </a>
 
         <a routerLink="/register" class="w-full">
-          <button class="bg-blue-600 hover:bg-blue-700 transition-colors duration-300 text-white font-bold py-3 px-6 rounded-md w-full shadow-lg transform hover:scale-105">
+          <button
+            class="bg-blue-600 hover:bg-blue-700 transition-colors duration-300 text-white font-bold py-3 px-6 rounded-md w-full shadow-lg transform hover:scale-105">
             Sign Up
           </button>
         </a>
