--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,8 @@
     <div *ngIf="authService.getUserDetail() as userDetail">
       <div class="flex gap-5 items-center">
         <a [matMenuTriggerFor]="menu" class="flex gap2 cursor-pointer items-center">
-          <div class="bg-red-400 text-white font-bold shadow-md rounded-full w-5 h-5 p-5 flex justify-center items-center mr-3">
+          <div
+            class="bg-red-400 text-white font-bold shadow-md rounded-full w-5 h-5 p-5 flex justify-center items-center mr-3">
             {{userDetail!.fullName[0].toUpperCase()}}
           </div>
           <div class="text-white flex flex-col">
@@ -42,18 +43,18 @@
       </div>
     </div>
     }@else{
-<div>
-  <div class="flex gap5 items-center">
-    <a mat-button routerLink="/login">
-      Login
-    </a>
+    <div>
+      <div class="flex gap5 items-center">
+        <a mat-button routerLink="/login">
+          Login
+        </a>
 
-    <a mat-button routerLink="/register">
-      Register
-    </a>
+        <a mat-button routerLink="/register">
+          Register
+        </a>
 
-  </div>
-  </div>
+      </div>
+    </div>
     }
 
   </mat-toolbar>
