--- a/src/app/components/user-login/user-login.component.html
+++ b/src/app/components/user-login/user-login.component.html
@@ -1,9 +1,5 @@
 <div class="h-screen flex items-center justify-center bg-gray-100 p-6">
-  <form
-    class="shadow-lg rounded-lg p-8 bg-white w-full max-w-sm"
-    [formGroup]="form"
-    (ngSubmit)="login()"
-  >
+  <form class="shadow-lg rounded-lg p-8 bg-white w-full max-w-sm" [formGroup]="form" (ngSubmit)="login()">
     <div class="text-center mb-6">
       <h1 class="text-3xl font-bold text-gray-800 mb-2">Login</h1>
       <h6 class="text-gray-600 text-base">Login to your account</h6>
@@ -19,28 +15,16 @@
     <!-- Password Field -->
     <mat-form-field appearance="fill" class="w-full mb-6">
       <mat-label>Password</mat-label>
-      <input
-        matInput
-        [type]="hide ? 'password' : 'text'"
-        formControlName="password"
-        placeholder="Password"
-      />
+      <input matInput [type]="hide ? 'password' : 'text'" formControlName="password" placeholder="Password" />
       <mat-icon matPrefix>lock</mat-icon>
-      <mat-icon
-        (click)="hide = !hide"
-        matSuffix
-        class="cursor-pointer"
-      >
+      <mat-icon (click)="hide = !hide" matSuffix class="cursor-pointer">
         {{ hide ? 'visibility_off' : 'visibility' }}
       </mat-icon>
     </mat-form-field>
 
     <!-- Login Button -->
-    <button
-      type="submit"
-      [disabled]="!form.valid"
-      class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg w-full transition duration-300 mb-4"
-    >
+    <button type="submit" [disabled]="!form.valid"
+      class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-4 rounded-lg w-full transition duration-300 mb-4">
       Login
     </button>
 
